# artushak-web-assets

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: asset_cache.rs  asset_config.rs  asset_filter.rs  assets.rs  assets_cache.rs  lib.rs  test.rs
test_files/: assets.json  assets_alt.json  assets_invalid.json
test_files/correct_output/: out1.txt  out2.txt
