[package]
name = "artushak-web-assets"
version = "0.1.0"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
edition = "2018"
description = "Web asset manager"
readme = "README.md"
license = "Apache-2.0"
categories = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
blake3 = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3"