[package]
name = "artushak-web-assets"
version = "0.1.0"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
edition = "2018"
description = "Asset file manager"
readme = "README.md"
license = "Apache-2.0"
keywords = ["assets"]
categories = ["web-programming", "filesystem", "caching"]
repository = "https://github.com/artushak/artushak_web_assets/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
base64 = "0.13"
blake3 = "1"
log = "0.4"
path-dedot = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3"